[package]
name = "jbob"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
build = "build.rs"

[profile.test]
# Optimize tests for use with `cargo test -- --ignored`.
opt-level = 3

[profile.release]
# Use various options to cut down binary size.
debug = false
lto = true
panic = "abort"

[lib]
# Build cdylib (for our wasm target) and lib (for use by examples/ and
# benches/).
crate-type = ["cdylib", "lib"]

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
peg = "0.5"

[dev-dependencies]
criterion = "0.2"

[dependencies]
wasm-bindgen = "0.2"
